[gd_scene load_steps=12 format=2]

[ext_resource path="res://World.gd" type="Script" id=1]
[ext_resource path="res://AsteroidsArcade.tscn" type="PackedScene" id=2]
[ext_resource path="res://PongArcade.tscn" type="PackedScene" id=3]
[ext_resource path="res://Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://Enemy.tscn" type="PackedScene" id=5]
[ext_resource path="res://Enemy-A-NW.tres" type="Animation" id=6]
[ext_resource path="res://Enemy-A-Short.tres" type="Animation" id=7]
[ext_resource path="res://Enemy-P-NW.tres" type="Animation" id=8]
[ext_resource path="res://Enemy-P-Short.tres" type="Animation" id=9]
[ext_resource path="res://BKG.tscn" type="PackedScene" id=10]

[sub_resource type="Animation" id=2]
resource_name = "Enemy-W"
length = 15.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 6.5, 7.2, 14.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 840.513, 500 ), Vector2( 175.644, 500 ), Vector2( 175.644, 500 ), Vector2( 840.513, 500 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Walk" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( -0.1, 6.7, 13.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}

[node name="World" type="Node2D"]
script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 513.481, 462.914 )
current = true
zoom = Vector2( 0.89, 0.89 )

[node name="AsteroidsArcade" parent="." instance=ExtResource( 2 )]
position = Vector2( 483.137, 486.471 )
z_index = 2

[node name="PongArcade" parent="." instance=ExtResource( 3 )]
position = Vector2( 388.519, 486.471 )
z_index = 2

[node name="Player" parent="." instance=ExtResource( 4 )]
position = Vector2( 692.245, 500 )
z_index = 3

[node name="Enemy" parent="." instance=ExtResource( 5 )]
position = Vector2( 840.513, 500 )
z_index = 4

[node name="AnimatedSprite" parent="Enemy" index="1"]
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Enemy"]
anims/Enemy-A-NW = ExtResource( 6 )
anims/Enemy-A-Short = ExtResource( 7 )
anims/Enemy-Asteroids = ExtResource( 6 )
anims/Enemy-P-NW = ExtResource( 8 )
anims/Enemy-P-Short = ExtResource( 9 )
anims/Enemy-Pong = ExtResource( 8 )
anims/Enemy-W = SubResource( 2 )

[node name="WaitTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="BKG" parent="." instance=ExtResource( 10 )]
[connection signal="body_entered" from="AsteroidsArcade" to="." method="_on_AsteroidsArcade_body_entered"]
[connection signal="body_exited" from="AsteroidsArcade" to="." method="_on_AsteroidsArcade_body_exited"]
[connection signal="body_entered" from="PongArcade" to="." method="_on_PongArcade_body_entered"]
[connection signal="body_exited" from="PongArcade" to="." method="_on_PongArcade_body_exited"]
[connection signal="animation_finished" from="Enemy/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="WaitTimer" to="." method="_on_WaitTimer_timeout"]

[editable path="Enemy"]
